Agregadas las secciones en index, junto con estilos básicos de prueba

--- a/index.html
+++ b/index.html
@@ -10,31 +10,44 @@
 
 <body>
     <header>
+        <h1 id="home">El pulpo's administración de garages privados</h1>
         <nav>
             <div class="nav__ul">
                 <ul>
-                    <li>Vínculo 1</li>
-                    <li>Vínculo 2</li>
-                    <li>Vínculo 3</li>
-                    <li>Vínculo 4</li>
-                    <li>Vínculo 5</li>
+                    <a href="#home">
+                        <li>Home</li>
+                    </a>
+                    <a href="#buscar">
+                        <li>buscar</li>
+                    </a>
+                    <a href="#unirse">
+                        <li>unirse</li>
+                    </a>
+                    <a href="#contacto">
+                        <li>contacto</li>
+                    </a>
+                    <a href="#aboutus">
+                        <li>sobre nosotros</li>
+                    </a>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
         <section>
-            <div class="section1"></div>
+            <div class="section1" id="buscar">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
+                tempora fuga beatae impedit illum, incidunt non aspernatur quisquam tenetur velit aliquid enim eos eius,
+                nulla accusantium deleniti eaque quas unde.</div>
         </section>
         <section>
-            <div class="section2"></div>
+            <div class="section2" id="unirse"></div>
         </section>
         <section>
-            <div class="section3"></div>
+            <div class="section3" id="contacto"></div>
         </section>
 
     </main>
-    <footer>
+    <footer id="aboutus">
 
     </footer>
 </body>
