Agregado fotos a media img. Editada la nav, y agregada las tarjetas

--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div class="section1" id="buscar">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
+        <section id="buscar">
+            <div class="seccion1__div-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
                 tempora fuga beatae impedit illum, incidunt non aspernatur quisquam tenetur velit aliquid enim eos eius,
                 nulla accusantium deleniti eaque quas unde.</div>
+                <div class="seccion1__div-2">
+
+                </div>
+                <div class="seccion1__div-3">
+
+                </div>
         </section>
         <section>
             <div class="section2" id="unirse"></div>
