--- a/index.html
+++ b/index.html
@@ -4,55 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/estilos.css">
     <title>Inicio página Cochera's</title>
 </head>
 
 <body>
     <header>
-        <h1 id="home">El pulpo's administración de garages privados</h1>
-        <nav>
-            <div class="nav__ul">
-                <ul>
-                    <a href="#home">
-                        <li>Home</li>
-                    </a>
-                    <a href="#buscar">
-                        <li>buscar</li>
-                    </a>
-                    <a href="#unirse">
-                        <li>unirse</li>
-                    </a>
-                    <a href="#contacto">
-                        <li>contacto</li>
-                    </a>
-                    <a href="#aboutus">
-                        <li>sobre nosotros</li>
-                    </a>
-                </ul>
-            </div>
-        </nav>
+        <div class="logo__fondo">
+            <span class="logo__prin"></span>
+            <h1 class="bebas-neue">Garage's hub</h1>
+        </div>
     </header>
+    <nav>
+        <ul class="nav__ul">
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#buscar">Buscar</a></li>
+            <li><a href="#unirse">Unirse</a></li>
+            <li><a href="#aboutus">Sobre nosotros</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+
+
     <main>
         <section id="buscar">
-            <div class="seccion1__div-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
-                tempora fuga beatae impedit illum, incidunt non aspernatur quisquam tenetur velit aliquid enim eos eius,
-                nulla accusantium deleniti eaque quas unde.</div>
-                <div class="seccion1__div-2">
-
-                </div>
-                <div class="seccion1__div-3">
-
-                </div>
+            <div class="flex_container">
+                <div class="flex_item">1</div>
+            </div>
         </section>
-        <section>
-            <div class="section2" id="unirse"></div>
+
+        <section id="unirse">
+            <div class="seccion2__contenedor">
+                <h2>Querés prestar tus servicios a través de nuestra página?</h2>
+                <p>Accedé para brindarnos tus datos, y unirte a la red de estacionamientos más grande ♥</p>
+            </div>
         </section>
-        <section>
-            <div class="section3" id="contacto"></div>
+
+        <section id="contacto">
+
         </section>
 
     </main>
+
     <footer id="aboutus">
 
     </footer>
