--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav>
         <ul class="nav__ul">
             <li><a href="#nav"><i class="fa-solid fa-house"></i>Inicio</a></li>
-            <li><a href="./form.html"><i class="fa-solid fa-user"></i>Log in</a></li>
+            <li><a href="./login.html"><i class="fa-solid fa-user"></i>Log in</a></li>
             <li><a href="#unirse"><i class="fa-solid fa-handshake"></i>Unirse</a></li>
             <li><a href="#aboutus"><i class="fa-solid fa-users-viewfinder"></i>Nosotros</a></li>
             <li><a href="./contact-form.html"><i class="fa-solid fa-at"></i>Contacto</a></li>
