agregado archivos js para la seccion mapa.html, creado el mapa con el que se brindará la información de cada lugar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Hoja de estilos CSS link -->
     <link rel="stylesheet" href="./CSS/estilos.css">
-    <title>Home Garage's hub</title>
+    <title>Home:Garage's hub</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <nav>
         <ul class="nav__ul">
             <li><a href="#nav"><i class="fa-solid fa-house"></i>Inicio</a></li>
-            <li><a href="./login.html"><i class="fa-solid fa-user"></i>Log in</a></li>
+            <li><a href="./form.html"><i class="fa-solid fa-user"></i>Log in</a></li>
             <li><a href="#unirse"><i class="fa-solid fa-handshake"></i>Unirse</a></li>
             <li><a href="#aboutus"><i class="fa-solid fa-users-viewfinder"></i>Nosotros</a></li>
             <li><a href="./contact-form.html"><i class="fa-solid fa-at"></i>Contacto</a></li>
@@ -37,7 +37,6 @@
 
     <main>
 
-        <!--section-->
         <section id="inicio">
             <div class="seccion1__img-container">
                 <span class="mask__div">
@@ -50,7 +49,7 @@
             </div>
         </section>
 
-        <!--section-->
+
         <section id="unirse">
             <div class="seccion2__flex-form">
                 <div class="flex-container">
