--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <nav>
         <ul class="nav__ul">
-            <li><a href="#nav"><i class="fa-solid fa-house"></i>Inicio</a></li>
+            <li><a href="./index.html"><i class="fa-solid fa-house"></i>Inicio</a></li>
             <li><a href="./login.html"><i class="fa-solid fa-user"></i>Log in</a></li>
             <li><a href="#unirse"><i class="fa-solid fa-handshake"></i>Unirse</a></li>
             <li><a href="#aboutus"><i class="fa-solid fa-users-viewfinder"></i>Nosotros</a></li>
@@ -54,17 +54,24 @@
         <section id="unirse">
             <div class="seccion2__flex-form">
                 <div class="flex-container">
-                 <h2>Querés prestar tus servicios a través de nuestra página?</h2>
-                 <p>Accedé para brindarnos tus datos, y unirte a la red de estacionamientos más grande ♥</p>
-                 <quote>formulario de prestador nuevo</quote>
-                 <br>
-                 <input type="reset" value="Reset datos">
-                 <input type="button" value="Enviar datos">
+                    <h2>Querés prestar tus servicios a través de nuestra página?</h2>
+                    <p>Accedé para brindarnos tus datos, y unirte a la red de estacionamientos más grande ♥</p>
+                    <blockquote>formulario de prestador nuevo</blockquote>
+                    <br>
+                    <input type="reset" value="Reset datos">
+                    <input type="button" value="Enviar datos">
                 </div>
             </div>
         </section>
 
-        <section id="contacto">
+        <section id="mapa">
+            <div class="seccion3__mapa">
+                <iframe class="seccion3__mapa-iframe"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d75008.41419053293!2d-58.461540121340875!3d-34.625018236618324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1715347107743!5m2!1ses-419!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </div>
 
         </section>
 
