agregado icono en minima resolucion con transparencia - no funciona js de ubicacion de marcadores. revisar -

--- a/mapa.html
+++ b/mapa.html
@@ -22,6 +22,8 @@
         });
     </script>
 
+    <!-- agrego el vinculo del archivo -->
+
     <script src="./JS/mapa.js"></script>
 
 
@@ -54,7 +56,7 @@
         </ul>
     </nav>
 
-
+<img src="./Media/img/img_icono_mapa_64.png" alt="">
     <main>
         <section class="mapa__container">
             <div class="listaEstacionamientos__main">
