--- a/mapa.html
+++ b/mapa.html
@@ -9,22 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-    <!-- conecto el archivo mapa_datos.js para poder manejar los datos -->
-    <script src="./JS/mapa_datos.js"></script>
+    <!-- conectamos la api de google maps con la página -->
 
-
-    <!--   
-      conectamos la api de google maps con la página
- -->
     <script>
         (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
             key: "AIzaSyCfjDu6s7dos2B8zoWoJKfGGhvg-6-9C_M",
         });
     </script>
 
-    <!-- agrego el vinculo del archivo -->
 
-    <script src="./JS/mapa.js"></script>
+    <!-- conecto el archivo mapa_datos.js para poder manejar los datos -->
+    <script src="./JS/mapa_datos.js"></script>
+    <!-- agrego el vinculo del archivo -->
+    <script src="./JS/mapa2.js"></script>
 
 
     <!--font awesome link -->
@@ -55,8 +52,6 @@
             <li><a href="./contact-form.html"><i class="fa-solid fa-at"></i>Contacto</a></li>
         </ul>
     </nav>
-
-<img src="./Media/img/img_icono_mapa_64.png" alt="">
     <main>
         <section class="mapa__container">
             <div class="listaEstacionamientos__main">
