mapa funcional con la ubicacion de 3 lugares teoricos

--- a/mapa.html
+++ b/mapa.html
@@ -54,11 +54,8 @@
     </nav>
     <main>
         <section class="mapa__container">
-            <div class="listaEstacionamientos__main">
+            <div class="listaEstacionamientos__main" id="estaNombres">
                 <h3>Lista de estacionamientos cercanos</h3>
-                <div class="estaNombres__main" id="estaNombres">
-
-                </div>
             </div>
             <div id="mapa__main"></div>
         </section>
