--- a/mapa.html
+++ b/mapa.html
@@ -45,17 +45,20 @@
     </header>
     <nav>
         <ul class="nav__ul">
-            <li><a href="#nav"><i class="fa-solid fa-house"></i>Inicio</a></li>
+            <li><a href="./index.html"><i class="fa-solid fa-house"></i>Inicio</a></li>
             <li><a href="./form.html"><i class="fa-solid fa-user"></i>Log in</a></li>
             <li><a href="#unirse"><i class="fa-solid fa-handshake"></i>Unirse</a></li>
+            <li><a href="./mapa.html"><i class="fa-solid fa-handshake"></i>Mapa</a></li>
             <li><a href="#aboutus"><i class="fa-solid fa-users-viewfinder"></i>Nosotros</a></li>
             <li><a href="./contact-form.html"><i class="fa-solid fa-at"></i>Contacto</a></li>
         </ul>
     </nav>
     <main>
         <section class="mapa__container">
-            <div class="listaEstacionamientos__main" id="estaNombres">
-                <h3>Lista de estacionamientos cercanos</h3>
+           
+            <div class="listaEstacionamientos__main">
+                <div class="mapa__lista-titulo"><h3>Lista de estacionamientos</h3></div>
+                <div id="estaNombres"></div>
             </div>
             <div id="mapa__main"></div>
         </section>
