--- a/mapa.html
+++ b/mapa.html
@@ -9,21 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-    <!-- conectamos la api de google maps con la página -->
-
-    <script>
-        (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
-            key: "AIzaSyCfjDu6s7dos2B8zoWoJKfGGhvg-6-9C_M",
-        });
-    </script>
-
-
-    <!-- conecto el archivo mapa_datos.js para poder manejar los datos -->
-    <script src="./JS/mapa_datos.js"></script>
-    <!-- agrego el vinculo del archivo -->
-    <script src="./JS/mapa2.js"></script>
-
-
+    <!-- conectamos la api de leaflet con la página -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <!--font awesome link -->
     <script src="https://kit.fontawesome.com/c1af2d25a3.js" crossorigin="anonymous"></script>
 
@@ -55,9 +43,11 @@
     </nav>
     <main>
         <section class="mapa__container">
-           
+
             <div class="listaEstacionamientos__main">
-                <div class="mapa__lista-titulo"><h3>Lista de estacionamientos</h3></div>
+                <div class="mapa__lista-titulo">
+                    <h3>Lista de estacionamientos</h3>
+                </div>
                 <div id="estaNombres"></div>
             </div>
             <div id="mapa__main"></div>
@@ -67,6 +57,12 @@
     </main>
 
 
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <!-- conecto el archivo mapa_datos.js para poder manejar los datos -->
+    <script src="./JS/mapa_datos.js"></script>
+    <!-- agrego el vinculo del archivo -->
+    <script src="./JS/mapa.js"></script>
 </body>
 
 </html>
