intento de mejorar el código con respecto a los clicks en el mapa por el momento sin éxito. improvisado el index.html

--- a/mapa.html
+++ b/mapa.html
@@ -48,7 +48,9 @@
                 <div class="mapa__lista-titulo">
                     <h3>Lista de estacionamientos</h3>
                 </div>
-                <div id="estaNombres"></div>
+                <div id="estaNombres">
+
+                </div>
             </div>
             <div id="mapa__main"></div>
         </section>
