--- a/login.html
+++ b/login.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="logo__fondo">
             <span class="logo__prin"></span>
@@ -28,21 +27,19 @@
             <li><a href="./index.html"><i class="fa-solid fa-house"></i>Inicio</a></li>
             <li><a href="./login.html"><i class="fa-solid fa-user"></i>Log in</a></li>
             <li><a href="#unirse"><i class="fa-solid fa-handshake"></i>Unirse</a></li>
-            <li><a href="./mapa.html"><i class="fa-solid fa-handshake"></i>Mapa</a></li>
             <li><a href="#aboutus"><i class="fa-solid fa-users-viewfinder"></i>Nosotros</a></li>
             <li><a href="./contact-form.html"><i class="fa-solid fa-at"></i>Contacto</a></li>
         </ul>
     </nav>
 
-
     <main>
         <div class="form__container">
             <div class="usuario__form">
-                <form action="" id="formularioUser" method="POST">
+                <form id="formularioUser" onsubmit="return prevenirCarga(event)">
                     <h1>Login de usuario</h1>
                     <div class="form__input">
                         <div class="form__input-box">
-                            <input type="text" name="varEmail" placeholder="mail registrado" required>
+                            <input type="text" name="varEmail" id="varEmail" placeholder="mail registrado" required>
                             <i class='bx bxs-user-circle'></i>
                         </div>
                         <div class="form__input-box">
@@ -52,23 +49,20 @@
                     </div>
                     <div class="form__olvidar">
                         <label for="recordar"><input type="checkbox" id="recordar">Recordar mis datos</label>
-                        <a href="#">Olvide mi contraseña T_T</a>
+                        <a href="#">Olvide mi contraseña</a>
                     </div>
-                    <button type="submit" class="btn__enviar">Loguearse</button>
+                    <button type="submit" class="btn__enviar">Acceder</button>
                     <div class="form__registro">
                         <p>No tienes una cuenta, <a href="#">regístrate</a></p>
                     </div>
-
-
-
                 </form>
             </div>
             <div class="dueno__form">
-                <form action="" id="formularioPres" method="POST">
+                <form id="formularioOwner" onsubmit="return validarCorreo()">
                     <h1>Login de Prestador</h1>
                     <div class="form__input">
                         <div class="form__input-box">
-                            <input type="text" name="varEmail" placeholder="mail registrado" required>
+                            <input type="text" name="varEmail" id="varEmailOwner" placeholder="mail registrado" required>
                             <i class='bx bxs-user-circle'></i>
                         </div>
                         <div class="form__input-box">
@@ -77,29 +71,18 @@
                         </div>
                     </div>
                     <div class="form__olvidar">
-                        <label for="recordar"><input type="checkbox" id="recordar">Recordar mis datos</label>
+                        <label for="recordarOwner"><input type="checkbox" id="recordarOwner">Recordar mis datos</label>
                         <a href="#">Olvide mi contraseña T_T</a>
                     </div>
                     <button type="submit" class="btn__enviar">Acceder</button>
                     <div class="form__registro">
                         <p>No tienes una cuenta, <a href="#">regístrate</a></p>
                     </div>
-
-
-
                 </form>
-
-
-
-
             </div>
-
-
         </div>
     </main>
-    <script src="./js/login.js" type="module">
-    </script>
-
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
