--- a/index.html
+++ b/index.html
@@ -52,46 +52,26 @@
 
 
         <section id="unirse">
-            <div class="seccion2__flex-cont">
-                <div class="seccion2__div-card bebas-neue">
+            <div class="seccion2__flex-form">
+                <div class="flex-container">
                     <h2>Querés prestar tus servicios a través de nuestra página?</h2>
-                    <ul class="no_sombra-letra_blanca">
-                        <li>Llenas el formulario con tus datos</li>
-                        <li>Te contactamos para confirmar la afiliación</li>
-                        <li>Accedes a la plataforma para actualizar la info sobre tus estacionamientos en tiempo real
-                        </li>
-                    </ul>
+                    <p>Accedé para brindarnos tus datos, y unirte a la red de estacionamientos más grande ♥</p>
+                    <blockquote>formulario de prestador nuevo</blockquote>
+                    <br>
+                    <input type="reset" value="Reset datos">
+                    <input type="button" value="Enviar datos">
                 </div>
-                <div class="seccion2__div-form">
-                    <form action="">
-                        <p>CONTACTANOS!</p>
-                        <p><label for="">Nombre</label><input type="text"></p>
-                        <p><label for="">Apellido</label><input type="text"></p>
-
-                        <input type="reset" value="Borrar">
-                        <input type="button" value="Enviar">
-                    </form>
-                </div>
-            </div>
             </div>
         </section>
 
         <section id="mapa">
-            <div class="seccion2__flex-cont">
-                <div class="seccion3__mapa">
-                    <iframe class="seccion3__mapa-iframe"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d75008.41419053293!2d-58.461540121340875!3d-34.625018236618324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1715347107743!5m2!1ses-419!2sar"
-                        width="600" height="450" style="border:0;" allowfullscreen="false" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="seccion2__div-card bebas-neue">
-                    <h3>Mapa en tiempo real</h3>
-                    <p class="no_sombra-letra_blanca">Te presentamos un mapa de la capital federal que se actualiza en tiempo real al momento en que se indica que un estacionamiento tiene plazas libres o está totalmente ocupado, para que no tengas que andar buscando lugar y sepas exactamente a donde te vas a dirigir.</p>
-                    <a href="./mapa.html"><button class="btnmapa">Mapa</button></a>
-                </div>
-            </div>
-            </div>
+            <div class="seccion3__mapa">
+                <iframe class="seccion3__mapa-iframe"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d75008.41419053293!2d-58.461540121340875!3d-34.625018236618324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1715347107743!5m2!1ses-419!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+            </div>
 
         </section>
 
